2001-10-14  Mark Mitchell  <mark@codesourcery.com>

	* qm/web.py (WebServer.TranslateRequest): Use os.path.isabs
	for robustness.

	* qm/common.py (RcConfiguration.__Load): Do not crash if the
	HOME environment variable is not defined.

	* doc/manual/common-manual.xml: Revise.
	* doc/manual/manual.xml: Likewise.
	* doc/manual/test-manual.xml: Likewise.
	* doc/manual/test-reference.xml: Remove.
	* doc/manual/test-tour.xml: Revise.
	* doc/manual/track-tour.xml: Revise.
	* doc/manual/track-reference.xml: Merge into...
	* doc/manual/track-manual.xml: ... here.
	
2001-10-13  Alex Samuel  <samuel@codesourcery.com>

	* doc/manual/manual.xml (track-reference): New entity.
	Reference it.
	* doc/manual/track-manual.xml (sec-qmtrack-configuration): New
	section.
	* doc/manual/track-reference.xml: New file.
	
2001-10-13  Alex Samuel  <samuel@codesourcery.com>

	* configure.in (DOCBOOK_DTD): Look for it in the standard place.
	* configure: Regenerate.

2001-10-13  Alex Samuel  <samuel@codesourcery.com>

	* qm/fields.py (FieldPropertyDeclaration): Rename to...
	(PropertyDeclaration): ... this.
	Adjust accordingly throughout.
	* qm/track/server.py (make_server): Use
	handle_shutdown_by_administrator. 
	(handle_shutdown): Rename to...
	(handle_shutdown_by_administrator): ... this.
	(handle_shutdown): New function.
	* qm/track/issue_database.py (setup_for_test): Use
	SetSubscriptionCondition. 
	* qm/track/issue_class.py (Trigger.class_name): New variable.
	(Trigger.property_declarations): Likewise.
	(Trigger.__init__): Rewrite.
	(Trigger.GetProperty): New method.
	(Trigger.SetProperty): Likewise.
	(Trigger.GetName): Use GetProperty.
	(Trigger.MakeDomNode): New method.
	(StateField.property_declarations): Adjust for
	PropertyDeclaration. 
	(IssueClass.GetField): Fix error code.
	(IssueClass.MakeDomNode): Store triggers.
	(trigger_from_dom_node): New function.
	(from_dom_node): Load triggers.
	* qm/track/triggers/state.py (Trigger.class_name): New variable.